--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "otp-generator": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
-    "resend": "^3.3.0",
+    "resend": "^3.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/otp-generator": "^4.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
