--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.414.0",
+    "lucide-react": "^0.424.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -26,12 +26,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.52.2",
     "resend": "^3.4.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
