--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-    "singleQuote": false,
-    "semi": true,
+    "trailingComma": "none",
     "tabWidth": 4,
-    "trailingComma": "es5",
-    "bracketSpacing": true
-  }
+    "semi": true,
+    "singleQuote": false
+}
