--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dependencies": {
         "@react-email/components": "^0.0.25",
         "bcrypt": "^5.1.1",
-        "libphonenumber-js": "^1.11.12",
         "mongoose": "^8.7.2",
         "next": "15.0.1",
+        "next-auth": "^4.24.10",
         "react": "19.0.0-rc-69d4b800-20241021",
         "react-dom": "19.0.0-rc-69d4b800-20241021",
         "resend": "^4.0.0",
