--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "embla-carousel-autoplay": "^8.3.0",
-        "embla-carousel-react": "^8.3.0",
-        "input-otp": "^1.2.4",
+        "embla-carousel-autoplay": "^8.3.1",
+        "embla-carousel-react": "^8.3.1",
+        "input-otp": "^1.2.5",
         "lucide-react": "^0.454.0",
         "mongoose": "^8.7.2",
-        "next": "15.0.1",
+        "next": "15.0.2",
         "next-auth": "^4.24.10",
         "react": "19.0.0-rc-69d4b800-20241021",
         "react-dom": "19.0.0-rc-69d4b800-20241021",
         "react-hook-form": "^7.53.1",
         "react-hot-toast": "^2.4.1",
         "react-tooltip": "^5.28.0",
-        "resend": "^4.0.0",
+        "redis": "^4.7.0",
+        "resend": "^4.0.1-alpha.0",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "usehooks-ts": "^3.1.0",
@@ -38,11 +39,11 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
-        "@types/node": "^22.8.2",
+        "@types/node": "^22.8.4",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^9.13.0",
-        "eslint-config-next": "15.0.1",
+        "eslint-config-next": "15.0.2",
         "postcss": "^8",
         "prettier": "^3.3.3",
         "tailwindcss": "^3.4.1",
